--- a/web/src/main/webapp/static/ng/views/deployment-detail.html
+++ b/web/src/main/webapp/static/ng/views/deployment-detail.html
@@ -14,40 +14,80 @@
         <div class="panel-body">
             <form id="deployment-detail-form" ng-submit="updateDeployment()">
                 <div class="pull-right">
-                    <a href="#/interaction/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" class="btn btn-default" type="submit" role="button"><i class="icon-desktop"></i> User Interface</a>
+                    <a href="#/activity/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" class="btn btn-default" type="submit" role="button"><i class="icon-desktop"></i> User Interface</a>
                 </div>
-                <fieldset>
-                    <div class="form-group">
-                        <label>Deployment Label</label>
-                        <div class="controls">
-                            <input class="form-control" type="text"
-                                   name="processDefinitionLabel" size="30" maxlength="80"
-                                   placeholder="Provide an optional label for this deployment"
-                                   ng-model="deployment.deploymentLabel"
-                                   ng-disabled="!deployment.editable">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label>BPMN Definition</label>
-                        <div class="controls">
-                            <a href="{{process.link}}/deployment/{{deployment.deploymentId}}/resource"><i class="icon-cloud-download"></i> <span>{{deployment.engineProcessDefinitionResource}}</span></a>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <fieldset>
+                                <div class="form-group">
+                                    <label>Deployment Label</label>
+                                    <div class="controls">
+                                        <input class="form-control" type="text"
+                                               name="processDefinitionLabel" size="30" maxlength="80"
+                                               placeholder="Provide an optional label for this deployment"
+                                               ng-model="deployment.deploymentLabel"
+                                               ng-disabled="!deployment.editable">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="controls">
+                                        <a href="{{process.link}}/deployment/{{deployment.deploymentId}}/resource"><i class="icon-cloud-download"></i> <span>{{deployment.engineProcessDefinitionResource}}</span></a>
 
-                            <input class="form-control" type="file"
-                                   name="processDefinitionFile"
-                                   placeholder="Provide a file"
-                                   ng-if="deployment.editable">
+                                        <input class="form-control" type="file"
+                                               name="processDefinitionFile"
+                                               placeholder="Provide a file"
+                                               ng-model="deploymentResource"
+                                               ng-if="deployment.editable">
+                                    </div>
+                                </div>
+                                <!--div class="form-group">
+                                    <label>Strategy</label>
+                                    <select class="form-control">
+                                        <option value="HYBRID">hybrid - both web forms and application integration</option>
+                                        <option value="API">application integration</option>
+                                        <option value="USER">web forms</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <i class="icon-circle-blank"></i>
+                                    <label>Start activity</label>
+                                    <input type="text" class="form-control" ng-model="startActivity.title"/>
+                                </div>
+                                <div ng-repeat="activity in deployment.activities">
+                                    <i class="icon-user"></i>
+                                    <label>Interaction label</label>
+                                    <input type="text" class="form-control" ng-model="interaction.label"/>
+                                </div-->
+                                <!--div class="form-group">
+                                    <label>Processes will be started by</label>
+                                    <select class="form-control">
+                                        <option value="API">an application</option>
+                                        <option value="USER">a person</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label>Beneficiary Form will be completed by</label>
+                                    <select class="form-control">
+                                        <option value="API">an application</option>
+                                        <option value="USER">a person</option>
+                                    </select>
+                                </div-->
+                            </fieldset>
                         </div>
+                        <!--img class="col-md-6" src="{{process.link}}/deployment/{{deployment.deploymentId}}/diagram"/-->
                     </div>
-                    <div>
-                        <img src="{{process.link}}/deployment/{{deployment.deploymentId}}/diagram"/>
+                    <div class="row"><p></p></div>
+                <div class="row"><p></p></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="pull-right">
+                            <button ng-if="deployment.editable" ng-click="updateDeployment(deployment)" class="btn btn-default" type="submit" role="button">Update</button>
+                            <button ng-if="deployment.editable" ng-click="releaseDeployment(deployment)" class="btn btn-danger" type="button" role="button"><i class="icon-rocket"></i> Release</button>
+                        </div>
+
+                        <div class="clearfix"></div>
                     </div>
-                </fieldset>
-                <div class="pull-right">
-                    <button ng-if="deployment.editable" class="btn btn-default" type="submit" role="button">Update</button>
-                    <button ng-if="deployment.editable" class="btn btn-danger" type="button" role="button"><i class="icon-rocket"></i> Release</button>
                 </div>
-
-                <div class="clearfix"></div>
             </form>
         </div>
     </div>
