Switching over search and toolbar buttons to use angular

--- a/web/src/main/resources/META-INF/piecework/templates/Form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.template.html
@@ -8,7 +8,7 @@
     <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href="/piecework/secure/"/>
+    <base href="/piecework/secure/form"/>
 </head>
 </head>
 <body role="application">
