--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -33,6 +33,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-sanitize.min.js"></script>
 <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
 <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
+<script src="../static/js/vendor/moment.min.js"></script>
 <script src="../static/ng/js/form.js"></script>
 </body>
 </html>
