--- a/web/src/main/webapp/static/ng/views/form.html
+++ b/web/src/main/webapp/static/ng/views/form.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top main-navbar">
+<!--div class="navbar navbar-fixed-top main-navbar">
     <div class="user-information">
         <div id="user-information-name" class="user-information-name pull-right">
         </div>
@@ -8,9 +8,60 @@
             <h1><i class="fa fa-tasks fa-lg"></i> {{form.container.title}}</h1>
         </div>
     </div>
-</div>
-<div class="container">
-    <div  class="main-content row">
+</div-->
+<nav class="navbar navbar-default navbar-inverse pw-navbar-collapse" style="min-height: 20px;margin-bottom: 0px">
+    <div id="user-information-name" class="pull-right">
+        <span style="color:white">Test user</span>
+    </div>
+</nav>
+<nav class="navbar navbar-default pw-navbar-collapse" style="margin-bottom: 0px">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle search</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+    <div class="container collapse navbar-collapse navbar-ex1-collapse">
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-4">
+                <button ng-show="form.task.active" class="btn btn-default navbar-btn" id="suspend-dialog-button" data-target="#suspend-dialog" data-backdrop="false" data-toggle="modal" title="Suspend process" type="button"><i class="fa fa-pause fa-white"></i></button>
+                <button ng-show="form.task.active" class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="fa fa-trash fa-white"></i></button>
+                <button ng-show="form.task.taskStatus == 'Suspended'" class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="fa fa-play fa-white"></i></button>
+            </div>
+            <div class="col-lg-8 col-sm-8">
+                <div class="responsive-pull-right">
+                    <p ng-show="form.task.active && form.task.assignee" class="navbar-text text-primary">Assigned to {{form.task.assignee.displayName}}</p>
+                    <div class="btn-group">
+                        <button class="btn btn-default navbar-btn incomplete-selected-result-btn" id="assign-dialog-button" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>
+                        <button data-ng-show="form.task.candidateAssignees" type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li data-ng-repeat="candidateAssignee in form.task.candidateAssignees"><a class="candidate-assignee" id="{{candidateAssignee.userId}}">Assign to {{candidateAssignee.displayName}}</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment-alt"></i></a>
+                    <button class="btn btn-default navbar-btn" id="file-button" title="Attach file"><i class="fa fa-paper-clip"></i></button>
+                    <input type="file" name="attachment" class="attach-file hide"/>
+                    <button class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{form.attachmentCount}}</span></button>
+                    <a class="btn btn-default navbar-btn" href="{{root}}.html" rel="external" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="main-content container">
+    <div  class="row">
+        <div ng-show="notifications" class="alert alert-danger">
+            <h4 ng-if="notifications[0].title">{{notifications[0].title}}</h4>
+            <ul>
+                <li ng-repeat="notification in notifications" ng-bind-html="notification.message"></li>
+            </ul>
+        </div>
+        <h2>{{form.container.title}}</h2>
         <div data-ng-show="form.container.readonly">
             <div data-ng-show="form.state == 'assigned'" class="alert alert-info">This form cannot be modified - it is assigned to {{form.task.assignee.displayName}}</div>
             <div data-ng-show="form.state == 'completed'" class="alert alert-info">This form can no longer be modified - it was completed by {{form.task.assignee.displayName}} on {{form.task.endTime}}</div>
